--- a/assets/scss/layouts/__layouts-dir.scss
+++ b/assets/scss/layouts/__layouts-dir.scss
@@ -4,4 +4,5 @@ Files inside this folder can contain specific element styles and layout.
 */
 
 //Import Layout files
+@import "index";
 @import "form";
